@@ -12,6 +12,9 @@
 /*
 	redirect to proper hostname to get around certificate problem on IE 5
 */
+if (is_file('/etc/sourceforge/custom/pre.php')){
+	require_once('/etc/sourceforge/custom/pre.php');
+} else {
 
 // Defines all of the Source Forge hosts, databases, etc.
 // This needs to be loaded first becuase the lines below depend upon it.
@@ -149,6 +152,7 @@ if (user_isloggedin()) {
 
 require_once('www/include/BaseLanguage.class');
 
+/*
 if (!$sys_lang) {
 	$sys_lang="English";
 }
@@ -176,6 +180,7 @@ if (user_isloggedin()) {
 	$Language=new BaseLanguage();
 	$Language->loadLanguage($classname);
 }
+*/
 
 setlocale (LC_TIME, $Language->getText('system','locale'));
 $sys_strftimefmt = $Language->getText('system','strftimefmt');
@@ -189,7 +194,7 @@ $sys_datefmt = $Language->getText('system','datefmt');
 if (!user_isloggedin() && ($Language->getLanguageId() == 1) && (count($HTTP_POST_VARS) < 1) && !session_issecure()) {
 	include_once('common/include/jpcache.php');
 }
-
+}
 /*
 
 
